tests/snapshots/snapshots__list_with_search_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1a1d23}  {/}{fg=#c8ccd4 bg=#1a1d23 mod=bold}/tmp/tasq-snapshot.txt{/}{bg=#1a1d23}                {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#8aa9c9 bg=#1f232b}▣{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}tasq{/}{fg=#c8ccd4 bg=#1f232b}                   {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1a1d23}  {/}{fg=#6b7280 bg=#1a1d23}4 tasks  ·  sort: priority{/}{bg=#1a1d23}            {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#e07a7a bg=#1f232b}⚑{/}{bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}Finish Q2 board deck{/}{bg=#1f232b}       {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1a1d23}  {/}{fg=#8aa9c9 bg=#303944} ⌕ work × {/}{bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}+ filter{/}{bg=#1a1d23}                   {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}⌂{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Home{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}due{/}{bg=#1f232b}       {/}{fg=#e07a7a bg=#1f232b}today{/}{bg=#1f232b}              {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}▤{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Inbox{/}{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#6b7280 bg=#1f232b}3{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#e07a7a bg=#1a1d23 mod=bold}PRIORITY A{/}{fg=#6b7280 bg=#1a1d23}  1  {/}{fg=#2a2f38 bg=#1a1d23}───────────────────────{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}space{/}{bg=#1f232b}     {/}{fg=#7fb3a8 bg=#1f232b}●{/}{bg=#1f232b} {/}{fg=#7fb3a8 bg=#1f232b}work{/}{bg=#1f232b}             {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#8aa9c9 bg=#1f232b}◉{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Today{/}{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#6b7280 bg=#1f232b}1{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#3a4150}  1 {/}{fg=#8aa9c9 bg=#3a4150 mod=bold}▎{/}{fg=#c8ccd4 bg=#3a4150}☐ {/}{fg=#e07a7a bg=#3a4150 mod=bold}⚑ {/}{fg=#c8ccd4 bg=#3a4150}Finish Q2 board deck {/}{fg=#e07a7a bg=#423034} ◷ due tod{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}priority{/}{bg=#1f232b}  {/}{fg=#e07a7a bg=#1f232b}⚑ high{/}{bg=#1f232b}             {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}◷{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Upcoming{/}{fg=#c8ccd4 bg=#1f232b}           {/}{fg=#6b7280 bg=#1f232b}6{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#d4b06a bg=#1a1d23 mod=bold}PRIORITY B{/}{fg=#6b7280 bg=#1a1d23}  2  {/}{fg=#2a2f38 bg=#1a1d23}───────────────────────{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}tags{/}{bg=#1f232b}      {/}{fg=#c89a6e bg=#1f232b}@laptop{/}{bg=#1f232b}            {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}≡{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}All tasks{/}{fg=#c8ccd4 bg=#1f232b}         {/}{fg=#6b7280 bg=#1f232b}15{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1a1d23}  2 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}☐ {/}{fg=#d4b06a bg=#1a1d23 mod=bold}⚑ {/}{fg=#c8ccd4 bg=#1a1d23}Revie{/}{fg=#1a1d23 bg=#d4b06a mod=bold}w{/}{fg=#c8ccd4 bg=#1a1d23} pull requests f{/}{fg=#1a1d23 bg=#d4b06a mod=bold}or{/}{fg=#c8ccd4 bg=#1a1d23} auth r{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#6b7280 bg=#1f232b}▦{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Calendar{/}{fg=#c8ccd4 bg=#1f232b}              {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1a1d23}  3 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}☐ {/}{fg=#d4b06a bg=#1a1d23 mod=bold}⚑ {/}{fg=#c8ccd4 bg=#1a1d23}Draft hiring rubric for senior {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b mod=bold}CHECKLIST{/}{bg=#1f232b}                    {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#c8ccd4 bg=#3a4150}  {/}{fg=#6b7280 bg=#3a4150}⌕{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c8ccd4 bg=#3a4150 mod=bold}Search{/}{fg=#c8ccd4 bg=#3a4150}             {/}{fg=#6b7280 bg=#3a4150}/{/}{fg=#c8ccd4 bg=#3a4150} {/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}  {/}{fg=#6b7280 bg=#1a1d23 mod=bold}NO PRIORITY{/}{fg=#6b7280 bg=#1a1d23}  1  {/}{fg=#2a2f38 bg=#1a1d23}──────────────────────{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b}+ add item{/}{bg=#1f232b}                   {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#6b7280 bg=#1a1d23}  4 {/}{fg=#c8ccd4 bg=#1a1d23} {/}{fg=#6b7280 bg=#1a1d23}☐ {/}{fg=#c8ccd4 bg=#1a1d23}Migrate analytics to ne{/}{fg=#1a1d23 bg=#d4b06a mod=bold}w{/}{fg=#c8ccd4 bg=#1a1d23} pipeline{/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b mod=bold}SPACES{/}{fg=#c8ccd4 bg=#1f232b}                   {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#7fb3a8 bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}work{/}{fg=#c8ccd4 bg=#1f232b}               {/}{fg=#6b7280 bg=#1f232b}4{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#d4b06a bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}health{/}{fg=#c8ccd4 bg=#1f232b}             {/}{fg=#6b7280 bg=#1f232b}3{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#8aa9c9 bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}finance{/}{fg=#c8ccd4 bg=#1f232b}            {/}{fg=#6b7280 bg=#1f232b}2{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#7a9ec9 bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}home{/}{fg=#c8ccd4 bg=#1f232b}               {/}{fg=#6b7280 bg=#1f232b}1{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#d4b06a bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}learning{/}{fg=#c8ccd4 bg=#1f232b}           {/}{fg=#6b7280 bg=#1f232b}1{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#8aa9c9 bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}personal{/}{fg=#c8ccd4 bg=#1f232b}           {/}{fg=#6b7280 bg=#1f232b}1{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#c89a6e bg=#1f232b}●{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}travel{/}{fg=#c8ccd4 bg=#1f232b}             {/}{fg=#6b7280 bg=#1f232b}1{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#6b7280 bg=#1f232b mod=bold}FILTERS{/}{fg=#c8ccd4 bg=#1f232b}                  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#e07a7a bg=#1f232b}⚑{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}High priority{/}{fg=#c8ccd4 bg=#1f232b}      {/}{fg=#6b7280 bg=#1f232b}2{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#d4b06a bg=#1f232b}★{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Starred{/}{fg=#c8ccd4 bg=#1f232b}            {/}{fg=#6b7280 bg=#1f232b}0{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}   {/}{fg=#e07a7a bg=#1f232b}◷{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#a8b0bc bg=#1f232b}Overdue{/}{fg=#c8ccd4 bg=#1f232b}            {/}{fg=#6b7280 bg=#1f232b}7{/}{fg=#c8ccd4 bg=#1f232b}  {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}╭───────────────────────╮{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#1a1d23 bg=#d4b06a mod=bold} Y {/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#c8ccd4 bg=#1f232b mod=bold}you{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#7aa67a bg=#1f232b}● file{/}{fg=#c8ccd4 bg=#1f232b}        {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}╰───────────────────────╯{/}{fg=#c8ccd4 bg=#1f232b} {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{fg=#c8ccd4 bg=#1f232b}                           {/}{fg=#2a2f38 bg=#1f232b}│{/}{fg=#c8ccd4 bg=#1a1d23}                                        {/}{fg=#2a2f38 bg=#1f232b}│{/}{bg=#1f232b}                               {/}
{bg=#1a1d23} {/}{fg=#1a1d23 bg=#8aa9c9 mod=bold}  ● normal  {/}{fg=#6b7280 bg=#1a1d23}   x done · e edit · r reschedule · Tab details{/}{bg=#1a1d23}                                 {/}{fg=#c8ccd4 bg=#1a1d23 mod=bold}␣{/}{fg=#6b7280 bg=#1a1d23} menu {/}
