tests/snapshots/snapshots__list_with_search_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
                           │  /tmp/tasq-snapshot.txt                │                               
  ▣ tasq                   │  4 tasks  ·  sort: priority            │  ⚑ Finish Q2 board deck       
                           │   ⌕ work ×  + filter                   │                               
   ◉ Today              1  │                                        │  due       today              
   ◷ Upcoming           6  │  PRIORITY A  1  ───────────────────────│  space     ● work             
   ≡ All tasks         15  │  1 ▎☐ ⚑ Finish Q2 board deck  ◷ due tod│  priority  ⚑ high             
   ▦ Calendar              │  PRIORITY B  2  ───────────────────────│  tags      @laptop            
   ⌕ Search             /  │  2  ☐ ⚑ Review pull requests for auth r│                               
                           │  3  ☐ ⚑ Draft hiring rubric for senior │  CHECKLIST                    
  SPACES                   │  NO PRIORITY  1  ──────────────────────│  + add item                   
   ● work               4  │  4  ☐ Migrate analytics to new pipeline│                               
   ● health             3  │                                        │                               
   ● finance            2  │                                        │                               
   ● home               1  │                                        │                               
   ● learning           1  │                                        │                               
   ● personal           1  │                                        │                               
   ● travel             1  │                                        │                               
                           │                                        │                               
  FILTERS                  │                                        │                               
   ⚑ High priority      2  │                                        │                               
   ★ Starred            0  │                                        │                               
   ◷ Overdue            7  │                                        │                               
                           │                                        │                               
                           │                                        │                               
                           │                                        │                               
                           │                                        │                               
                           │                                        │                               
 ╭───────────────────────╮ │                                        │                               
 │  Y  you ● file        │ │                                        │                               
 ╰───────────────────────╯ │                                        │                               
                           │                                        │                               
   ● normal     x done · e edit · r reschedule · Tab details                                 ␣ menu
